--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Vishal Tripathi
-# logo: /assets/img/headshot_circle.png
-#description: text below image
-# show_downloads: true
+logo: assests/Screenshot 2024-02-16 at 1.59.53 PM.png
+description: Profile photo
+show_downloads: true
 theme: jekyll-theme-minimal
