--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Vishal Tripathi
 logo: assests/Screenshot 2024-02-16 at 1.59.53 PM.png
 description: Profile photo
 show_downloads: true
-theme: jekyll-theme-midnight
+theme: jekyll-theme-time-machine
