--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ashritha.live",
+  "homepage": "https://Vishal3041.github.io/Vishal3041.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -16,7 +16,6 @@
     "@testing-library/user-event": "^13.5.0",
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.16.1",
-    "gh-pages": "^6.0.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -53,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
